Fixed clipping issue on events and council pages

--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,9 @@ body {
   background-color: var(--background);
   margin: 0;
   padding-bottom: 150px;
+  min-height: fit-content;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 h1 { font-size: var(--h1-size); color: var(--primary-100); }
@@ -354,8 +356,7 @@ header nav .button.nav {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  min-height: fit-content;
 }
 
 .section-header {
@@ -639,7 +640,8 @@ header nav .button.nav {
   width: clamp(60%, 1700px, 85%);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: min(5%, 100px);
+  column-gap: min(5%, 100px);
+  row-gap: 100px;
   padding: 0;
   margin-top: 100px;
   margin-bottom: 1rem;
@@ -734,7 +736,9 @@ header nav .button.nav {
   display: grid;
   width: clamp(60%, 1700px, 85%);
   grid-template-columns: 1fr 1fr 1fr;
-  gap: min(5%, 100px);
+  grid-template-rows: auto;
+  column-gap: min(5%, 100px);
+  row-gap: 100px;
   margin-top: 100px;
   padding: 0;
   list-style: none;
